[package]
name = "y4mt"
version = "0.1.0"
authors = ["Fredrik Pihl <siriannalisa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
y4m = "0.3.3"
clap = "2"
#clap-validators = {git = "https://github.com/clap-rs/clap-validators" }
